# PrivaProof-

./: .gitignore  INTEGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md
apps/backend/: env.example  package-lock.json  package.json
apps/backend/src/: index.ts
apps/frontend/: README.md  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
contracts/: addresses.json  env.example  package-lock.json  package.json
contracts/scripts/: check-balance.ts  deploy.ts
contracts/typechain-types/: hardhat.d.ts  index.ts
contracts/typechain-types/contracts/: DIDRegistry.ts  index.ts
did-overnight/: DIDRegistry_ABI.json  FIX_SUMMARY.md  README.md  READY_TO_TEST.md  deploy-mainnet.sh  deploy-testnet.sh  setup.sh  start.sh  test-sandbox-api.sh
did-overnight/backend/: env.example  package-lock.json
did-overnight/contracts/: hardhat.config.ts
did-overnight/frontend/: package-lock.json  package.json
docs/: API_AUTHENTICATION_ISSUE.md  DEBUG_GUIDE.md  FINAL_STATUS.md  FIX_APPLIED.md  IROH_MIGRATION_PLAN.md  LIVE_ON_TESTNET.md  MAINNET_SETUP.md  METAMASK_SETUP.md  PHASE1_FIXED.md  PROGRESS.md  QUICK_START.md  README.md  REAL_IROH_INTEGRATION.md  SANDBOX_API_GUIDE.md  SANDBOX_API_SETUP.md  STATUS.md  STORAGE_ARCHITECTURE.md  TECHNICAL_FLOW.md  TESTING_GUIDE.md  TESTNET_SETUP.md  TEST_INSTRUCTIONS.md  TRUST_TRIANGLE_PATTERN.md  UI_ENHANCEMENTS.md  WHY_IROH_NODE.md  WORKING_NOW.md
scripts/: deploy.sh
services/iroh-node/: Cargo.toml  DISTRIBUTED_PROFILE_SYSTEM.md  README.md
services/iroh-node/src/: main.rs
(+43 files in other folders)
