[package]
name = "iroh-node"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
http = "1"
# Real iroh dependencies (version 0.94 - latest stable from https://github.com/n0-computer/iroh)
iroh = "0.94"
iroh-blobs = "0.96"
iroh-gossip = "0.94"
# SHA256 for topic hashing
sha2 = "0.10"
# Stream utilities for AddProgress
futures = "0.3"
bytes = "1"
